# tululu

./: .gitignore  Makefile  book.py  books.json  category.py  deploy.sh  fetch.py  main.py  parse_tululu_books.py  parse_tululu_category.py  pyproject.toml  readme.md  render_website.py  template.html  utils.py
assets/: index.html
pages/: index1.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html
