[tool.poetry]
name = "tululu"
version = "0.1.0"
description = ""
authors = ["Andrey Miskov <amiskov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pathvalidate = "^3.1.0"
backoff = "^2.2.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
